# historyfm

./: .gitignore  DEPLOY_TODO.md  FRONTEND_OVERVIEW.md  FrontEndIdeas.md  IMPLEMENTATION_STATUS.md  ImplementationOverview.md  NextSteps-Latest.md  ProductRequirements.md  TechBlogOutline.md  generation_config.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt
alien_sedition_acts_12ch/: generation_config.yaml
alien_sedition_acts_12ch/structure/: novel_structure.json
alien_sedition_acts_12ch/world/: characters.json  era_tone_guide.json  historical_context.json  institutions.json
backlog/: alien-sedition-acts.yaml  bank-war.yaml  burning-of-washington.yaml  fort-sumter.yaml  johnson-impeachment.yaml  louisiana-purchase.yaml  mexican-american-war.yaml
frontend/: package-lock.json  package.json
frontend/content/: polls.json
john_tyler_succession_12ch/: generation_config.yaml
john_tyler_succession_12ch/structure/: novel_structure.json
john_tyler_succession_12ch/world/: characters.json  era_tone_guide.json  (+2 more)
louisiana_purchase_phase11_v2_3ch/: generation_config.yaml
scripts/: daily_generate.py  deploy.sh  init_novel.py  novel_daemon.py  stop_daemon.sh  sync-content.sh
sovereign_ink/: __init__.py  __main__.py  main.py
tests/: test_chapter6_fixture_regression.py  test_chapter_edit_lab.py  test_compliance_migration.py  test_contract_enforcement.py  test_llm_client_overload.py  test_phase10_changes.py  test_phase7_changes.py  test_phase9_changes.py  test_progression_lock.py  test_stage5_smart_repetition.py  test_text_quality.py
(+201 files in other folders)
